# fcitx5-macos

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
appium/: CMakeLists.txt  Info.plist  TestConfigView.swift  conftest.py  entry.swift  requirements.txt  test_boolean.py  test_custom_phrase.py  test_entry.py  test_group.py  test_import_customized_table.py
appium/util/: boolean.py  button.py  config.py  file.py  message.py  window.py
assets/: CMakeLists.txt
assets/ru.lproj/: Localizable.strings
macosfrontend/: macosfrontend.cpp
po/: ru.po
scripts/: format.sh  lint.sh
src/: CMakeLists.txt  controller.swift  fcitx.cpp  menu.swift  server.swift
src/config/: Advanced.swift  BooleanView.swift  ConfigWindowController.swift  GlobalConfig.swift  InputMethod.swift  PluginManager.swift  ThemeEditor.swift  about.swift  font.swift  keycode.swift  util.swift
